Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.
! Broken/Alert

~~~~~~~~~~~~0.0.1 Revitalize 3-22-2023 xx.xx P.M~~~~~~~~~~~~~~
~Fixed some code so now dropping in items into machines functions with holding right click like normal gameplay.
+Added manual powered machine type that runs on stamina. Currently only used for Anvils.
+Added artifact trove and golden coconut processing recipes to magical and (unimplemented) galaxy geode crushers.
~Cleaned up more code from the defunct anvil crafting.

~~~~~~~~~~~~0.0.1 Revitalize 3-21-2023 xx.xx P.M~~~~~~~~~~~~~~
~Anvils no longer are used to craft objects due to not being able to think of many use cases.
+Anvils now can manually crack geodes, artifact troves, and golden coconuts.

~~~~~~~~~~~~0.0.1 Revitalize 3-16-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added in the Dimensional Storage Bag, which allows accessing items from anywhere!
  +Can be bought from the Walnut room for 100qi gems
  +Alternatively the blueprints can be bought from the Walnut room for 35 qi gems.

~~~~~~~~~~~~0.0.1 Revitalize 3-14-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added in Dimensional Storage Chest
    +Allows accessing the Dimensional Storage Unit's contents from anywhere.
    +Added Automate compatibility for this as well, which would allow for mass automating of operations from a single storage source.
~Fixed a glitch where objects would be consumed when holding and dragging left click.
~Fixed more naming conventions for Deluxe Charcoal Kiln
~Added a more helpful error message when crafting blueprints fail to load.
~Updated SDVRevitalizeCreationTool to set the paths properly.

~~~~~~~~~~~~0.0.1 Revitalize 3-13-2023 xx.xx P.M~~~~~~~~~~~~~~
~Fixed geode crusher outputs scaling too high.
!Fixed a typo with Delux->Deluxe

~~~~~~~~~~~~0.0.1 Revitalize 2-24-2023 xx.xx P.M~~~~~~~~~~~~~~
~Fix displaying crafting recipe output multiple time for same object crafting in many ways.
